<resources>
    <string name="app_name">Tarea3</string>
    <string name="title">Vintage Bicycle</string>
    <string name="color_lbl">Color</string>
    <string name="xl">XL</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="xs">XS</string>
    <string name="description">Description</string>
    <string name="description_text">Creación de una aplicación utilizando las mejores prácticas vistas en clase como son uso de recursos: cadenas, colores, dimensiones, estilos. Creación de una aplicación utilizando las mejores prácticas vistas en clase como son uso de recursos: cadenas, colores, dimensiones, estilos. Creación de una aplicación utilizando las mejores prácticas vistas en clase como son uso de recursos: cadenas, colores, dimensiones, estilos.</string>
    <string name="measurement">Measurement</string>
    <string name="measurement_text">Creación de una aplicación utilizando las mejores prácticas vistas en clase como son uso de recursos: cadenas, colores, dimensiones, estilos. Creación de una aplicación utilizando las mejores prácticas vistas en clase como son uso de recursos: cadenas, colores, dimensiones, estilos. Creación de una aplicación utilizando las mejores prácticas vistas en clase como son uso de recursos: cadenas, colores, dimensiones, estilos.</string>
    <string name="add_cart_text">Add to Cart</string>
</resources>
